# AdversarialSearch

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  install.sh
config/: master_addresses.txt
data/music/: README.md
data/shaders/: bananed_shader.frag  boo_shader.frag  dice_shader.frag  star_boom_shader.frag  star_shader.frag
data/textures/: dice_extended.xcf
include/: AIPlayer.h  Attributes.h  Board.h  BoardTrap.h  BoardTrapSprite.h  Connection.h  Dice.h  DiceSprite.h  ExplosionSprite.h  GameSelector.h  Parchis.h  ParchisGUI.h  Piece.h  PieceSprite.h  Player.h  RectangularButton.h  SpecialItemSprite.h  SpriteAnimator.h
src/: AIPlayer.cpp  Board.cpp  BoardTrap.cpp  BoardTrapSprite.cpp  Button.cpp  Connection.cpp  Dice.cpp  DiceSprite.cpp  ExplosionSprite.cpp  GUIPlayer.cpp  GameSelector.cpp  Parchis.cpp  ParchisGUI.cpp  Piece.cpp  PieceSprite.cpp  RectangularButton.cpp  SpecialItemSprite.cpp  SpriteAnimator.cpp  main.cpp
